--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -125,29 +125,62 @@
 <BR><BR>
     <!-- GRID DATA SECTION -->
     <div id="griddata" class="griddata">
-        <h4>Fusion Releases</h4><BR>
+        <h4>FusionShell OpenV25 Current Releases</h4><BR>
 
         <div class="griddata-table">
             <!-- REST API results will be injected here -->
             <div class="grid-row">
-                <span>Record 1</span>
-                <span>Status: OK</span>
-                <span>Updated: Today</span>
-				<span>Updated: Today</span>
+                <span>FusionShell Open</span>
+                <span>Variant: ExtranetBuild</span>
+                <span>Updated: 12/2025</span>
+				<span>Version: Open25</span>
+				<span>Modules: Sales, Marketing, Shop</span>
             </div>
 
             <div class="grid-row">
-                <span>Record 2</span>
-                <span>Status: Pending</span>
-                <span>Updated: Yesterday</span>
-				<span>Updated: Today</span>
+                <span>FusionShell Open</span>
+                <span>Variant: IntranetBuild</span>
+                <span>Updated: 12/2025</span>
+				<span>Version: Open25</span>
+				<span>Modules: Sales, Marketing, Shop</span>
+            </div>
+            <div class="grid-row">
+                <span>FusionShell Open Backoffice/span>
+                <span>Variant: ERPCore</span>
+                <span>Updated: 12/2021</span>
+				<span>Modules: Accounting, HR, Forms, Mobile</span>
+            </div>
+        </div>
+		<div id="griddata" class="griddata">
+        <h4>FusionShell Professional Current Releases</h4><BR>
+
+        <div class="griddata-table">
+            <!-- REST API results will be injected here -->
+            <div class="grid-row">
+                <span>FusionShell ProfessionalV5</span>
+                <span>Variant: SalesOperations</span>
+                <span>Updated: 12/2021</span>
+				<span>Version: 5.0</span>
+				<span>Modules: Sales, Marketing, Shop</span>
             </div>
 
             <div class="grid-row">
-                <span>Record 3</span>
-                <span>Status: Error</span>
-                <span>Updated: 2 days ago</span>
-				<span>Updated: Today</span>
+                <span>FusionShell Open Backoffice/span>
+                <span>Variant: ERPCore on MSSQL Server</span>
+                <span>Updated: 12/2021</span>
+				<span>Modules: Microsoft Dynamics SL Extensions</span>
+            </div>
+			<div class="grid-row">
+                <span>FusionShell Open Backoffice/span>
+                <span>Variant: ERPCore on MSSQL Server</span>
+                <span>Updated: 12/2021</span>
+				<span>Modules: NCR Backoffice for Aloha</span>
+            </div>
+			<div class="grid-row">
+                <span>FusionShell Open Backoffice/span>
+                <span>Variant: ERPCore on Oracle Server</span>
+                <span>Updated: 12/2021</span>
+				<span>Modules: Oracle Netsuite and Micros Extensions</span>
             </div>
         </div>
     </div>
@@ -577,6 +610,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
