--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -145,7 +145,7 @@
 				<span>Modules: Sales, Marketing, Shop</span>
             </div>
             <div class="grid-row">
-                <span>FusionShell Open Backoffice/span>
+                <span>FusionShell Open Backoffice</span>
                 <span>Variant: ERPCore</span>
                 <span>Updated: 12/2021</span>
 				<span>Modules: Accounting, HR, Forms, Mobile</span>
@@ -165,19 +165,19 @@
             </div>
 
             <div class="grid-row">
-                <span>FusionShell Open Backoffice/span>
+                <span>FusionShell Open Backoffice</span>
                 <span>Variant: ERPCore on MSSQL Server</span>
                 <span>Updated: 12/2021</span>
 				<span>Modules: Microsoft Dynamics SL Extensions</span>
             </div>
 			<div class="grid-row">
-                <span>FusionShell Open Backoffice/span>
+                <span>FusionShell Open Backoffice</span>
                 <span>Variant: ERPCore on MSSQL Server</span>
                 <span>Updated: 12/2021</span>
 				<span>Modules: NCR Backoffice for Aloha</span>
             </div>
 			<div class="grid-row">
-                <span>FusionShell Open Backoffice/span>
+                <span>FusionShell Open Backoffice</span>
                 <span>Variant: ERPCore on Oracle Server</span>
                 <span>Updated: 12/2021</span>
 				<span>Modules: Oracle Netsuite and Micros Extensions</span>
@@ -610,6 +610,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
