--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -147,6 +147,7 @@
             <div class="grid-row">
                 <span>FusionShell Open Backoffice</span>
                 <span>Variant: ERPCore</span>
+				<span>Version: Open25</span>
                 <span>Updated: 12/2021</span>
 				<span>Modules: Accounting, HR, Forms, Mobile</span>
             </div>
@@ -160,25 +161,28 @@
                 <span>FusionShell ProfessionalV5</span>
                 <span>Variant: SalesOperations</span>
                 <span>Updated: 12/2021</span>
-				<span>Version: 5.0</span>
-				<span>Modules: Sales, Marketing, Shop</span>
+				<span>Version: 5.01</span>
+				<span>Modules: Sales, Marketing, Shop, LunaAI, MobileWeb, Mobile</span>
             </div>
 
             <div class="grid-row">
                 <span>FusionShell Open Backoffice</span>
                 <span>Variant: ERPCore on MSSQL Server</span>
+				<span>Version: V5.01</span>
                 <span>Updated: 12/2021</span>
 				<span>Modules: Microsoft Dynamics SL Extensions</span>
             </div>
 			<div class="grid-row">
                 <span>FusionShell Open Backoffice</span>
                 <span>Variant: ERPCore on MSSQL Server</span>
+				<span>Version: V5.01</span>
                 <span>Updated: 12/2021</span>
 				<span>Modules: NCR Backoffice for Aloha</span>
             </div>
 			<div class="grid-row">
                 <span>FusionShell Open Backoffice</span>
                 <span>Variant: ERPCore on Oracle Server</span>
+				<span>Version: V5.01</span>
                 <span>Updated: 12/2021</span>
 				<span>Modules: Oracle Netsuite and Micros Extensions</span>
             </div>
@@ -610,6 +614,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
