--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -125,7 +125,7 @@
 <BR><BR>
     <!-- GRID DATA SECTION -->
     <div id="griddata" class="griddata">
-        <h4>FusionShell OpenV25 Current Releases</h4><BR>
+        <h4>FusionShell Open Current Releases</h4><BR>
 
         <div class="griddata-table">
             <!-- REST API results will be injected here -->
@@ -614,6 +614,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
