--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -177,29 +177,43 @@
 <!-- ========================= -->
 <section class="main-content">
 <BR><BR>
-	<iframe id="centercourt" width="100%" height="600" style="border:0;"></iframe>
+	<iframe id="centercourt" width="80%" height="600" style="border:0;"></iframe>
 
     <section class="sales-slider">
   <div class="slider-window">
     <div class="slides">
 
       <!-- Slide 1 -->
-      <div class="slide" data-url="https://example.com/page1">
-        <img src="slide1.jpg" alt="Sale 1">
+      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
+        <img src="./images/slide1.jpg" alt="Sale 1">
       </div>
 
       <!-- Slide 2 -->
-      <div class="slide" data-url="https://example.com/page2">
-        <img src="slide2.jpg" alt="Sale 2">
+      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
+        <img src="./images/slide2.jpg" alt="Sale 2">
       </div>
 
       <!-- Slide 3 -->
-      <div class="slide" data-url="https://example.com/page3">
-        <img src="slide3.jpg" alt="Sale 3">
+      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
+        <img src="/images/slide3.jpg" alt="Sale 3">
+      </div>
+		
+		<!-- Slide 4 -->
+      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
+        <img src="./images/slide4.jpg" alt="Sale 1">
       </div>
 
-      <!-- Add up to 6 slides -->
-    </div>
+      <!-- Slide 5 -->
+      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
+        <img src="./images/slide5.jpg" alt="Sale 2">
+      </div>
+
+      <!-- Slide 6 -->
+      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
+        <img src="/images/slide6.jpg" alt="Sale 3">
+      </div>
+
+      </div>
   </div>
 
   <button class="prev">❮</button>
@@ -741,6 +755,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 	
 </body>
 </html>
+
 
 
 
