--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -183,35 +183,30 @@
   <div class="slider-window">
     <div class="slides">
 
-      <!-- Slide 1 -->
-      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
-        <img src="./images/slide1.jpg" alt="Sale 1">
-      </div>
+      <div class="slide" data-url="https://example.com/page1">
+  <img src="./images/slide1.png" alt="Slide 1">
+</div>
 
-      <!-- Slide 2 -->
-      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
-        <img src="./images/slide2.jpg" alt="Sale 2">
-      </div>
+<div class="slide" data-url="https://example.com/page2">
+  <img src="./images/slide2.png" alt="Slide 2">
+</div>
 
-      <!-- Slide 3 -->
-      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
-        <img src="/images/slide3.jpg" alt="Sale 3">
-      </div>
-		
-		<!-- Slide 4 -->
-      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
-        <img src="./images/slide4.jpg" alt="Sale 1">
-      </div>
+<div class="slide" data-url="https://example.com/page3">
+  <img src="./images/slide3.png" alt="Slide 3">
+</div>
 
-      <!-- Slide 5 -->
-      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
-        <img src="./images/slide5.jpg" alt="Sale 2">
-      </div>
+<div class="slide" data-url="https://example.com/page4">
+  <img src="./images/slide4.png" alt="Slide 4">
+</div>
 
-      <!-- Slide 6 -->
-      <div class="slide" data-url="https://source.unsplash.com/random/600x300/?product">
-        <img src="/images/slide6.jpg" alt="Sale 3">
-      </div>
+<div class="slide" data-url="https://example.com/page5">
+  <img src="./images/slide5.png" alt="Slide 5">
+</div>
+
+<div class="slide" data-url="https://example.com/page6">
+  <img src="./images/slide6.png" alt="Slide 6">
+</div>
+
 
       </div>
   </div>
@@ -755,6 +750,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 	
 </body>
 </html>
+
 
 
 
