--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -183,27 +183,27 @@
   <div class="slider-window">
     <div class="slides">
 
-      <div class="slide" data-url="https://example.com/page1">
+      <div class="slide" data-url="https://www.chase.com">
   <img src="./images/slide1.png" alt="Slide 1">
 </div>
 
-<div class="slide" data-url="https://example.com/page2">
+<div class="slide" data-url="https://www.citigroup.com">
   <img src="./images/slide2.png" alt="Slide 2">
 </div>
 
-<div class="slide" data-url="https://example.com/page3">
+<div class="slide" data-url="https://www.wellsfargo.com">
   <img src="./images/slide3.png" alt="Slide 3">
 </div>
 
-<div class="slide" data-url="https://example.com/page4">
+<div class="slide" data-url="https://www.usbank.com">
   <img src="./images/slide4.png" alt="Slide 4">
 </div>
 
-<div class="slide" data-url="https://example.com/page5">
+<div class="slide" data-url="https://www.rbc.com">
   <img src="./images/slide5.png" alt="Slide 5">
 </div>
 
-<div class="slide" data-url="https://example.com/page6">
+<div class="slide" data-url="https://www.hsbc.com">
   <img src="./images/slide6.png" alt="Slide 6">
 </div>
 
@@ -750,6 +750,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 	
 </body>
 </html>
+
 
 
 
