--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -169,7 +169,7 @@
 <!-- ========================= -->
 <section class="main-content">
 <BR><BR>
-	<div align="center" style="text-align:center;"><iframe id="centercourt" width="80%" height="300" style="border:0;"></iframe></div>
+	<div align="center" style="text-align:center;"><iframe id="centercourt" width="999px" height="300px" style="border:0;"></iframe></div>
 
 <!-- Slider below -->
 <section class="sales-slider">
@@ -219,8 +219,7 @@
   <button class="next">❯</button>
 </section>
 
-
-
+<BR><BR><BR><BR>
 	
 	<!-- GRID DATA SECTION -->
     <div id="griddata" class="griddata">
@@ -755,6 +754,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 	
 </body>
 </html>
+
 
 
 
