--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -16,17 +16,18 @@
 				 margin-bottom: var(--space-2); /* becomes 16px */ 
 				gap: 4px;
 				}
+  /* Thumbnail slider */
   .sales-slider {
     position: relative;
-    width: 600px;
-    height: 100px;
+    width: 999px;
+    height: 133px;
     margin: 10px auto;
     overflow: hidden;
   }
 
   .slider-window {
-    width: 100%;
-    height: 100px;
+    width: 999px;
+    height: 133px;
     overflow: hidden;
   }
 
@@ -36,21 +37,22 @@
   }
 
   .slide {
-    min-width: 100px;
-    height: 100px;
+    min-width: 300px;
+    height: 133px;
     cursor: pointer;
     padding: 2px;
   }
 
   .slide img {
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 133px;
     object-fit: cover;
+    border-radius: 4px;
   }
 
   .prev, .next {
     position: absolute;
-    top: 35%;
+    top: 40%;
     background: rgba(0,0,0,0.4);
     color: white;
     border: none;
@@ -716,22 +718,29 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
   let index = 0;
   let currentLink = slideItems[0].dataset.link;
 
-  // Load first image into iframe
-  iframe.src = slideItems[0].dataset.img;
+  const slidesContainer = document.querySelector('.slides');
+  const slideItems = document.querySelectorAll('.slide');
+  const iframe = document.getElementById('centercourt');
 
-  // When iframe is clicked → go to the current slide's link
+  let index = 0;
+  let currentLink = slideItems[0].dataset.link;
+
+  // Load first image into iframe
+  iframe.src = slideItems[0].dataset.url;
+
+  // Clicking the iframe goes to the website for the current slide
   iframe.addEventListener('click', () => {
-    window.location.href = currentLink;   // or window.open(currentLink, '_blank');
+    window.location.href = currentLink;  // or window.open(currentLink, "_blank")
   });
 
   function showSlide(i) {
     index = i;
     const slide = slideItems[index];
-    const img = slide.dataset.img;
-    currentLink = slide.dataset.link;
 
-    iframe.src = img;
-    slidesContainer.style.transform = `translateX(-${index * 100}px)`;
+    iframe.src = slide.dataset.url;     // load PNG into iframe
+    currentLink = slide.dataset.link;   // store website link
+
+    slidesContainer.style.transform = `translateX(-${index * 300}px)`;
   }
 
   document.querySelector('.next').onclick = () => {
@@ -754,6 +763,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 	
 </body>
 </html>
+
 
 
 
