--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -711,58 +711,57 @@
   // Inject CSS variables into :root
 theme.spacing(2); // `${4 * 2}px` = '8px'
 
-  const slidesContainer = document.querySelector('.slides');
-  const slideItems = document.querySelectorAll('.slide');
-  const iframe = document.getElementById('centercourt');
+    // Make sure elements exist
+    const slidesContainer = document.querySelector('.slides');
+    const slideItems = document.querySelectorAll('.slide');
+    const iframe = document.getElementById('centercourt');
+    const prevBtn = document.querySelector('.prev');
+    const nextBtn = document.querySelector('.next');
 
-  let index = 0;
-  let currentLink = slideItems[0].dataset.link;
+    if (slidesContainer && slideItems.length && iframe && prevBtn && nextBtn) {
+      let index = 0;
+      let currentLink = slideItems[0].dataset.link;
 
-  const slidesContainer = document.querySelector('.slides');
-  const slideItems = document.querySelectorAll('.slide');
-  const iframe = document.getElementById('centercourt');
+      // Load first image into iframe
+      iframe.src = slideItems[0].dataset.url;
 
-  let index = 0;
-  let currentLink = slideItems[0].dataset.link;
+      // Clicking the iframe goes to the website for the current slide
+      iframe.addEventListener('click', () => {
+        window.location.href = currentLink; // or window.open(currentLink, '_blank');
+      });
 
-  // Load first image into iframe
-  iframe.src = slideItems[0].dataset.url;
+      function showSlide(i) {
+        index = i;
+        const slide = slideItems[index];
 
-  // Clicking the iframe goes to the website for the current slide
-  iframe.addEventListener('click', () => {
-    window.location.href = currentLink;  // or window.open(currentLink, "_blank")
-  });
+        iframe.src = slide.dataset.url;     // load PNG into iframe
+        currentLink = slide.dataset.link;   // store website link
 
-  function showSlide(i) {
-    index = i;
-    const slide = slideItems[index];
+        slidesContainer.style.transform = `translateX(-${index * 300}px)`;
+      }
 
-    iframe.src = slide.dataset.url;     // load PNG into iframe
-    currentLink = slide.dataset.link;   // store website link
+      nextBtn.onclick = () => {
+        showSlide((index + 1) % slideItems.length);
+      };
 
-    slidesContainer.style.transform = `translateX(-${index * 300}px)`;
-  }
+      prevBtn.onclick = () => {
+        showSlide((index - 1 + slideItems.length) % slideItems.length);
+      };
 
-  document.querySelector('.next').onclick = () => {
-    showSlide((index + 1) % slideItems.length);
-  };
-
-  document.querySelector('.prev').onclick = () => {
-    showSlide((index - 1 + slideItems.length) % slideItems.length);
-  };
-
-  slideItems.forEach((slide, i) => {
-    slide.addEventListener('click', () => {
-      showSlide(i);
-    });
-  });
-</script>
+      slideItems.forEach((slide, i) => {
+        slide.addEventListener('click', () => {
+          showSlide(i);
+        });
+      });
+    } else {
+      console.warn('Slider elements not found – check HTML structure and class names.');
+    }
+  </script>
 
 
-
-	
 </body>
 </html>
+
 
 
 
