--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -180,25 +180,25 @@
 
       <div class="slide"
            data-img="./images/slide1.png"
-           data-link="https://example.com/page1">
+           data-link="https://disney.com">
         <img src="./images/slide1.png" alt="Slide 1">
       </div>
 
       <div class="slide"
            data-img="./images/slide2.png"
-           data-link="https://example.com/page2">
+           data-link="https://reuters.com">
         <img src="./images/slide2.png" alt="Slide 2">
       </div>
 
       <div class="slide"
            data-img="./images/slide3.png"
-           data-link="https://example.com/page3">
+           data-link="https://bbc.com">
         <img src="./images/slide3.png" alt="Slide 3">
       </div>
 
       <div class="slide"
            data-img="./images/slide4.png"
-           data-link="https://example.com/page4">
+           data-link="https://abcnews.com">
         <img src="./images/slide4.png" alt="Slide 4">
       </div>
 
@@ -761,6 +761,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
