--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -225,7 +225,7 @@
 	
 	<!-- GRID DATA SECTION -->
     <div id="griddata" class="griddata">
-        <h4>FusionShell Open Current Releases</h4><BR>
+        <span><img src="./images/fusionopen25.png" width="200px" height="200px"><h4>FusionShell Open Current Releases</h4></span><BR>
 
         <div class="griddata-table">
             <!-- REST API results will be injected here -->
@@ -253,7 +253,7 @@
             </div>
         </div>
 		<div id="griddata" class="griddata">
-        <h4>FusionShell Professional Current Releases</h4><BR>
+        <span><img src="fusionopen25.png" width="200px" height="200px"><h4>FusionShell Professional Current Releases</h4></span><BR>
 
         <div class="griddata-table">
             <!-- REST API results will be injected here -->
@@ -761,6 +761,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
