--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -204,13 +204,13 @@
 
       <div class="slide"
            data-img="./images/slide5.png"
-           data-link="https://example.com/page5">
+           data-link="https://www.cnn.com">
         <img src="./images/slide5.png" alt="Slide 5">
       </div>
 
       <div class="slide"
            data-img="./images/slide6.png"
-           data-link="https://example.com/page6">
+           data-link="https://foxnews.com">
         <img src="./images/slide6.png" alt="Slide 6">
       </div>
 
@@ -761,6 +761,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
