--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -252,7 +252,7 @@
 				<span>Version: Open25</span>
                 <span>Modules: Accounting, HR, Forms, Mobile</span>
             </div>
-        </div>
+        </div><BR><BR>
 		<div id="griddata" class="griddata">
         <div align="center"><span align="center"><img src="./images/fusionpro25.png" width="200px" height="200px"></span><BR>
 			<BR><h4>FusionShell Open Current Releases</h4></div><BR>
@@ -763,6 +763,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
