--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -171,7 +171,7 @@
 <!-- ========================= -->
 <section class="main-content">
 <BR><BR>
-	<div align="center" style="text-align:center;"><iframe id="centercourt" width="999" height="300" style="border:0;"></iframe></div>
+	<div align="center" style="text-align:center;"><iframe id="centercourt" width="900" height="300" style="border:0; margin: 0 auto; text-align:center;"></iframe></div>
 
 <!-- Slider below -->
 <section class="sales-slider">
@@ -763,6 +763,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
