--- a/project/homepage/contacts.html
+++ b/project/homepage/contacts.html
@@ -115,13 +115,12 @@
 
    <div class="pageheader">
      <hr>
-     <span align="center"><h4>Welcome to Greenville Associates Enterprise Software Solutions</h4></span>
+     <span align="center"><h4>Sales Contact Request Form</h4></span>
       <hr>
     </div>
     
 <section class="top-section">
-    <h2 class="text-center mb-4">Contact Submission Form</h2>
-
+    
     <form id="contactForm">
         <div class="mb-3">
             <label>Phone</label>
@@ -168,7 +167,7 @@
             <input type="text" class="form-control" name="fax">
         </div>
 
-        <button type="submit" class="btn btn-custom w-100">Submit</button>
+        <button type="submit" class="btn btn-custom w-100" style="width: 100px; margin: 0 auto; text-align: center; background-color: black; color: white;">Submit</button>
     </form>
 </section>
 
