--- a/project/homepage/usernotices.html
+++ b/project/homepage/usernotices.html
@@ -182,7 +182,7 @@
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span>
     <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
 </section>
 <footer>
