--- a/project/homepage/contacts.html
+++ b/project/homepage/contacts.html
@@ -119,7 +119,7 @@
       <hr>
     </div>
     
-<section class="top-section">
+<section class="top-section" style="columns: 2; text-align: center;">
     
     <form id="contactForm">
         <div class="mb-3">
