--- a/project/homepage/contacts.html
+++ b/project/homepage/contacts.html
@@ -141,8 +141,8 @@
       <hr>
     </div>
     
-<section class="top-section" style="columns: 2; text-align: center;">
-    
+   
+    <section class="top-section">
     <form id="contactForm">
         <div class="mb-3">
             <label>Phone</label>
@@ -192,6 +192,7 @@
         <button type="submit" class="btn btn-custom w-100" style="width: 100px; margin: 0 auto; text-align: center; background-color: black; color: white;">Submit</button>
     </form>
 </section>
+
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
