--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -67,7 +67,7 @@
 
 </head>
 <body>
-<div class="container2">
+<div class="container2" style="border: solid 2px darkgreen;">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -763,6 +763,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
