--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -17,6 +17,7 @@
     <div class="dropdown">
         <button class="dropbtn" style="background-color: black;">Menu ▼</button>
         <div class="dropdown-content">
+             <a href="index.html">Home</a>
             <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
@@ -28,6 +29,7 @@
             <a href="mycart.html">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
+            <a href="slider.html">AdminSalesTemplate</a>
         </div>
     </div>
 
