--- a/project/greenvilletemplate/slider.html
+++ b/project/greenvilletemplate/slider.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CenterCourt Slider Test</title>
+    <meta charset="UTF-8">
+    <title>Greenville Associates | Template</title>
+    <!-- Material Web Components -->
+    <!-- Corporate Styles -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./css/sites.css"></head> 
+    <link rel="stylesheet" href="./css/layout.css"></head> 
+    <link rel="stylesheet" href="./css/greenville.css"></head> <!--Greenville Last Word on Colors and Styling -->
+<!-- Material Icons -->
   <style>
     /* Big display iframe wrapper just for centering */
     #centercourt {
@@ -61,6 +68,89 @@
     .prev { left: 0; }
     .next { right: 0; }
   </style>
+</head>
+<body>
+<div class="container2">
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn" style="background-color: black;">Menu ▼</button>
+        <div class="dropdown-content">
+             <a href="index.html">Home</a>
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">LicenseTypes</a>
+            <a href="mylicenselogs.html">LicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="mycart.html">MyCart</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
+            <a href="slider.html">AdminSalesTemplate</a>
+        </div>
+    </div>
+
+  <div class="right-links" style="display:flex; gap:6px; align-items:center;">
+
+    <md-text-button href="index.html">
+        <span class="material-icons">home</span>
+     </md-text-button>
+
+    <md-text-button href="userhelp.html">
+        <span class="material-icons">help_outline</span>
+    </md-text-button>
+
+    <md-text-button href="usernotices.html">
+        <span class="material-icons">notifications</span>
+    </md-text-button>
+
+    <md-text-button href="login.html">
+        <span class="material-icons">login</span>
+    </md-text-button>
+
+    <md-text-button href="logout.html">
+        <span class="material-icons">logout</span>
+    </md-text-button>
+
+</div>
+
+</div>
+
+<header>
+    <h1>Greenville Enterprise Software</h1>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
+</header>
+
+<!-- ========================= -->
+<!-- INTERIOR PAGE NAVIGATION  -->
+<!-- ========================= -->
+<nav>
+    <ul class="menu" style="margin: 0 auto; max-width: 1600px;">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
+            <a href="#">Products ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="products.html">All Products</a></li>
+                <li><a href="licenses.html">Licenses</a></li>
+            </ul>
+        </li>
+
+        <li class="dropdown">
+            <a href="#">Account ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="login.html">Login</a></li>
+                <li><a href="logout.html">Logout</a></li>
+                <li><a href="mylicenses.html">My Licenses</a></li>
+                <li><a href="mycart.html">My Cart</a></li>
+            </ul>
+        </li>
+
+        <li><a href="contact.html">Contact Sales</a></li>
+    </ul>
+</nav>
+
+  <title>CenterCourt Slider Test</title>
 </head>
 <body>
 
