--- a/project/greenvilletemplate/slider.html
+++ b/project/greenvilletemplate/slider.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="./css/greenville.css"></head> <!--Greenville Last Word on Colors and Styling -->
 <!-- Material Icons -->
   <style>
+      iframe
+      {
+        vertical-align: center;
+        width: 1000px;
+        height: 300px;
+        margin: 0 auto;
+        max-width: 980px;
+      }
     /* Big display iframe wrapper just for centering */
     #centercourt {
       display: block;
