--- a/project/greenvilletemplate/slider.html
+++ b/project/greenvilletemplate/slider.html
@@ -18,6 +18,7 @@
         height: 300px;
         margin: 0 auto;
         max-width: 980px;
+        border: 2px solid darkgreen;
       }
     /* Big display iframe wrapper just for centering */
     #centercourt {
