--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -657,7 +657,7 @@
     </div>
 
 </section>
-<section class="middle-columns">
+<section class="middle-columns" style="background-color: lightgrey;">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
     <div class="mid-col">
@@ -763,6 +763,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
