--- a/project/homepage/loginerror.html
+++ b/project/homepage/loginerror.html
@@ -93,7 +93,7 @@
             <button type="submit">Login</button>
         </form>
 
-        <p id="error"></p>
+        <p id="error">You Must Login to Use Protected Content!</p>
     </div>
 </section>
 
