--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -220,8 +220,73 @@
   <button class="prev">❮</button>
   <button class="next">❯</button>
 </section>
+	
 
 <BR><BR><BR><BR>
+
+	<!-- FIRST FEATURES SECTION -->
+    <div id="features" class="features">
+        <h4>Explore</h4><BR>
+
+        <div class="feature-grid">
+
+            <a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
+                <h5 style="text-align: center;">FusionBasics</h5>
+                <p>Review Containerized Application Types, Site Licenses, Extranet, Intranet Portal Technologies.</p>
+            </a>
+
+            <a href="feature2.html" class="feature-card">
+                <img src="./images/image2.png" width="100px" height="100px" alt="Feature Icon">
+                <h5 style="text-align: center;">Deployment Options</h5>
+                <p>Review Premise, ILEC, Cloud, Grid and Hybrid Deployment Options.</p>
+            </a>
+
+            <a href="feature3.html" class="feature-card">
+                <img src="./images/image3.png" width="100px" height="100px" alt="Feature Icon">
+                <h5 style="text-align: center;">LicenseTypes</h5>
+                <p>Review License Types, Trial Delivery and Service Options.</p>
+            </a>
+
+            <a href="feature4.html" class="feature-card">
+                <img src="./images/image4.png" width="100px" height="100px" alt="Feature Icon">
+                <h5 style="text-align: center;">Pricing Wizard</h5>
+                <p>Develop Pricing for Utility Usage, Site Licenses, and Cloud/Hybrid Options.</p>
+            </a>
+		</div>
+        </div>
+		<BR><BR>
+		
+		<!-- SECOND FEATURES SECTION -->
+    	<div id="features" class="features">
+        <h4>Manage</h4><BR>
+		<div class="feature-grid">
+    
+				<a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
+                <h5 style="text-align: center;">MyLicenses</h5>
+                <p>Manage and secure your personal licenses, and monitor real time stats.</p>
+            </a>
+				<a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
+                <h5 style="text-align: center;">MyLicenseLogs</h5>
+                <p>Manage and review your Usage and Security Profile.</p>
+            </a>
+				<a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
+                <h5 style="text-align: center;">CorporateLicenses</h5>
+                <p>Manage and Monitor your Enterprise Licenses across the world.</p>
+            </a>
+				<a href="feature1.html" class="feature-card">
+                <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
+                <h5 style="text-align: center;">CorporateActions</h5>
+                <p>Manage and Monitor Enterprise Actions, and Security.</p>
+            </a>
+			
+        </div>
+    </div>
+
+</section>
 	
 	<!-- GRID DATA SECTION -->
     <div id="griddata" class="griddata">
@@ -292,69 +357,7 @@
     </div>
 
 <BR><BR>
-    <!-- FEATURES SECTION -->
-    <div id="features" class="features">
-        <h4>Explore</h4><BR>
-
-        <div class="feature-grid">
-
-            <a href="feature1.html" class="feature-card">
-                <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
-                <h5 style="text-align: center;">FusionBasics</h5>
-                <p>Review Containerized Application Types, Site Licenses, Extranet, Intranet Portal Technologies.</p>
-            </a>
-
-            <a href="feature2.html" class="feature-card">
-                <img src="./images/image2.png" width="100px" height="100px" alt="Feature Icon">
-                <h5 style="text-align: center;">Deployment Options</h5>
-                <p>Review Premise, ILEC, Cloud, Grid and Hybrid Deployment Options.</p>
-            </a>
-
-            <a href="feature3.html" class="feature-card">
-                <img src="./images/image3.png" width="100px" height="100px" alt="Feature Icon">
-                <h5 style="text-align: center;">LicenseTypes</h5>
-                <p>Review License Types, Trial Delivery and Service Options.</p>
-            </a>
-
-            <a href="feature4.html" class="feature-card">
-                <img src="./images/image4.png" width="100px" height="100px" alt="Feature Icon">
-                <h5 style="text-align: center;">Pricing Wizard</h5>
-                <p>Develop Pricing for Utility Usage, Site Licenses, and Cloud/Hybrid Options.</p>
-            </a>
-		</div>
-        </div>
-		<BR><BR>
-		
-		<!-- SECOND FEATURES SECTION -->
-    	<div id="features" class="features">
-        <h4>Manage</h4><BR>
-		<div class="feature-grid">
     
-				<a href="feature1.html" class="feature-card">
-                <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
-                <h5 style="text-align: center;">MyLicenses</h5>
-                <p>Manage and secure your personal licenses, and monitor real time stats.</p>
-            </a>
-				<a href="feature1.html" class="feature-card">
-                <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
-                <h5 style="text-align: center;">MyLicenseLogs</h5>
-                <p>Manage and review your Usage and Security Profile.</p>
-            </a>
-				<a href="feature1.html" class="feature-card">
-                <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
-                <h5 style="text-align: center;">CorporateLicenses</h5>
-                <p>Manage and Monitor your Enterprise Licenses across the world.</p>
-            </a>
-				<a href="feature1.html" class="feature-card">
-                <img src="./images/image1.png" width="100px" height="100px" alt="Feature Icon">
-                <h5 style="text-align: center;">CorporateActions</h5>
-                <p>Manage and Monitor Enterprise Actions, and Security.</p>
-            </a>
-			
-        </div>
-    </div>
-
-</section>
 
 
 <section id="products">
@@ -763,6 +766,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
