--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -166,7 +166,7 @@
 <!-- ========================= -->
 <!--     LOWER 3‑COLUMN        -->
 <!-- ========================= -->
-<section class="middle-columns" style="background-color: lightgrey;">
+<section class="middle-columns" >
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
     <div class="mid-col">
