--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -310,6 +310,7 @@
 <BR><BR>
   <!-- Slider below -->
 <section class="sales-slider">
+<h4>Consider</h4><BR>
   <div class="slider-window">
     <div class="slides">
 
@@ -766,6 +767,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
