--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -231,13 +231,13 @@
             </a>
 			
         </div>
-    </div>
-<h4>Consider</h4><BR>
-	
-<section class="sales-slider">
-<BR><BR>
-<div align="center" style="text-align:center;"><iframe id="centercourt" width="900" height="300" style="border:0; margin: 0 auto; text-align:center;"></iframe></div>
-  <div class="slider-window">
+    </div><br><br>
+	<div id="features" class="features"
+	<h4>Consider</h4><BR>
+	<section class="sales-slider">
+	<BR><BR>
+	<div align="center" style="text-align:center;"><iframe id="centercourt" width="900" height="300" style="border:0; margin: 0 auto; text-align:center;"></iframe></div>
+  	<div class="slider-window">
     <div class="slides">
 
       <div class="slide"
@@ -277,12 +277,12 @@
       </div>
 
     </div>
-  </div>
+  	</div>
 
-  <button class="prev">❮</button>
-  <button class="next">❯</button>
-</section>
-
+  	<button class="prev">❮</button>
+  	<button class="next">❯</button>
+	</section>
+	</div>
 	
 	<!-- GRID DATA SECTION -->
     <div id="griddata" class="griddata">
@@ -766,6 +766,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
