--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -361,21 +361,23 @@
 
 
 <section id="products">
-    <h2>Product Families</h2>
+    <h2>Product Modules</h2>
 
     <div class="products">
         <div class="product-card">
-            <h3>Core Platform Suite</h3>
+            <h3>FusionShell Portal & Operational Tools</h3>
             <p>Foundational tools designed to power large‑scale enterprise operations.</p>
             <ul>
-                <li>Workflow automation</li>
-                <li>Identity and access management</li>
-                <li>Centralized administration</li>
+                <li>Sales Operations</li>
+                <li>Product Development</li>
+                <li>Social Media Marketing</li>
+				<li>Ecommerce and Stripe Enabled Cart</li>
+				<li>Cross-Platform, Web, DesktopApps, and Mobile Tools</li>
             </ul>
         </div>
 
         <div class="product-card">
-            <h3>Data & Analytics</h3>
+            <h3>Proximity Data & Analytics</h3>
             <p>Advanced analytics products for data‑driven decision making.</p>
             <ul>
                 <li>Enterprise reporting</li>
@@ -403,6 +405,18 @@
                 <li>Integration services</li>
             </ul>
         </div>
+		<div class="product-card">
+            <h3>Enterprise BackOffice Tools</h3>
+            <p>Complex Infrastructure Tools</p>
+            <ul>
+                <li>Human Resources</li>
+                <li>Accounting Tools</li>
+                <li>Training Tools</li>
+				<li>Surveys and Electronic Fullfillment</li>
+				<li>Domain Controlled - Single Sign On</li>
+            </ul>
+        </div>
+		
     </div>
 </section>
 
@@ -766,6 +780,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
