--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -232,56 +232,57 @@
 			
         </div>
     </div><br><br>
+	<!-- THIRD FEATURES SECTION -->
 	<div id="features" class="features"
 	<h4>Consider</h4><BR>
-	<section class="sales-slider">
-	<BR><BR>
-	<div align="center" style="text-align:center;"><iframe id="centercourt" width="900" height="300" style="border:0; margin: 0 auto; text-align:center;"></iframe></div>
-  	<div class="slider-window">
-    <div class="slides">
+	  <!-- Big display -->
+  <iframe id="centercourt" width="999" height="300" style="border:0;"></iframe>
 
-      <div class="slide"
-           data-img="./images/slide1.png"
-           data-link="https://disney.com">
-        <img src="./images/slide1.png" alt="Slide 1">
+  <!-- Thumbnails -->
+      <div class="slider-window">
+      <div class="slides">
+
+        <div class="slide"
+             data-url="./images/slide1.png"
+             data-link="https://example.com/page1">
+          <img src="./images/slide1.png" alt="Slide 1">
+        </div>
+
+        <div class="slide"
+             data-url="./images/slide2.png"
+             data-link="https://example.com/page2">
+          <img src="./images/slide2.png" alt="Slide 2">
+        </div>
+
+        <div class="slide"
+             data-url="./images/slide3.png"
+             data-link="https://example.com/page3">
+          <img src="./images/slide3.png" alt="Slide 3">
+        </div>
+
+        <div class="slide"
+             data-url="./images/slide4.png"
+             data-link="https://example.com/page4">
+          <img src="./images/slide4.png" alt="Slide 4">
+        </div>
+
+        <div class="slide"
+             data-url="./images/slide5.png"
+             data-link="https://example.com/page5">
+          <img src="./images/slide5.png" alt="Slide 5">
+        </div>
+
+        <div class="slide"
+             data-url="./images/slide6.png"
+             data-link="https://example.com/page6">
+          <img src="./images/slide6.png" alt="Slide 6">
+        </div>
+
       </div>
-
-      <div class="slide"
-           data-img="./images/slide2.png"
-           data-link="https://reuters.com">
-        <img src="./images/slide2.png" alt="Slide 2">
-      </div>
-
-      <div class="slide"
-           data-img="./images/slide3.png"
-           data-link="https://bbc.com">
-        <img src="./images/slide3.png" alt="Slide 3">
-      </div>
-
-      <div class="slide"
-           data-img="./images/slide4.png"
-           data-link="https://abcnews.com">
-        <img src="./images/slide4.png" alt="Slide 4">
-      </div>
-
-      <div class="slide"
-           data-img="./images/slide5.png"
-           data-link="https://www.cnn.com">
-        <img src="./images/slide5.png" alt="Slide 5">
-      </div>
-
-      <div class="slide"
-           data-img="./images/slide6.png"
-           data-link="https://foxnews.com">
-        <img src="./images/slide6.png" alt="Slide 6">
-      </div>
-
     </div>
-  	</div>
 
-  	<button class="prev">❮</button>
-  	<button class="next">❯</button>
-	</section>
+    <button class="prev">❮</button>
+    <button class="next">❯</button>
 	</div>
 	
 	<!-- GRID DATA SECTION -->
@@ -780,6 +781,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
