--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -63,6 +63,23 @@
 
   .prev { left: 0; }
   .next { right: 0; }
+
+	.products {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.product-card {
+    width: 300px;
+    min-height: 200px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+}
+
 </style>
 
 </head>
@@ -778,6 +795,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
