--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -248,7 +248,8 @@
             </a>
 			
         </div>
-    </div><br><br>
+    	</div>
+	<br><br>
 	<!-- THIRD FEATURES SECTION -->
 	<div id="features" class="features"
 	<h4>Consider</h4><BR>
@@ -484,14 +485,13 @@
 </section>
 
 <section id="pricing">
-    <span align="center"><font color="green"><h2>License Store</h2></font></span>
+<HR>
+	<span align="center"><font color="green"><h2>License Store</h2></font></span>
     <span align="center"><p>Choose the perfect license for your needs.</p></span>
-
+<HR>
     <!-- ENTERPRISE LICENSES -->
-    <HR>
-    <h3 id="nopricing-enterprise">Enterprise Licenses</h3>
-    <HR>
-    <div class="products">
+     <h3 id="nopricing-enterprise">Enterprise Licenses</h3>
+     <div class="products">
 
         <div class="product-card">
             <h3>Enterprise Site License – Unlimited</h3>
@@ -795,6 +795,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
