--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -458,28 +458,37 @@
 </section>
 
 <section id="licensing">
-    <h2>Enterprise Licensing</h2>
+    <h2>Enterprise Licensing Options</h2>
     <p>Greenville Associates offers flexible enterprise licensing models designed to support organizations of all sizes and structures.</p>
 
     <div class="products">
         <div class="product-card">
-            <h3>Software Based on Utility Hours</h3>
+            <h3>(1)Software Based on Utility Hours</h3>
             <p>Pay only for the compute or usage hours consumed by your organization.</p>
         </div>
 
         <div class="product-card">
-            <h3>Named Users</h3>
+            <h3>(2)Named Users Models</h3>
             <p>Licenses assigned to individual users for predictable cost and access control.</p>
+        </div>
+		
+		<div class="product-card">
+            <h3>(3)Simultaneous Users Models</h3>
+            <p>Assign Licenses to user counts to maintain License Flexibility.</p>
         </div>
 
         <div class="product-card">
-            <h3>Business Unit Enterprise Licenses</h3>
+            <h3>(4)Enterprise - Business Unit Licenses</h3>
             <p>Licensing tailored to specific divisions or departments within your organization.</p>
         </div>
 
         <div class="product-card">
-            <h3>Enterprise License Types</h3>
+            <h3>(5)Enterprise - Organizational Wide Licenses</h3>
             <p>Organization‑wide licensing with unlimited usage across all business units.</p>
+        </div>
+		<div class="product-card">
+            <h3>(6)Enterprise - Site Licenses</h3>
+            <p>Unlimited Licenses for a single site out of an Enterprise.</p>
         </div>
     </div>
 </section>
@@ -795,6 +804,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
