--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -64,12 +64,6 @@
   .prev { left: 0; }
   .next { right: 0; }
 
-	.products {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
 .product-card {
     width: 300px;
     min-height: 200px;
@@ -79,7 +73,7 @@
     background: #fff;
     box-shadow: 0 4px 12px rgba(0,0,0,0.08);
 }
-
+.products { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
 </style>
 
 </head>
@@ -804,6 +798,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
