--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -74,6 +74,7 @@
     box-shadow: 0 4px 12px rgba(0,0,0,0.08);
 }
 .products { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
+.product-features { columns: 2; column-gap: 20px; padding-left: 20px; }
 </style>
 
 </head>
@@ -798,6 +799,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
