--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -247,11 +247,13 @@
 	<br><br>
 	<!-- THIRD FEATURES SECTION -->
 	<div id="features" class="features"
-	<h4>Consider</h4><BR>
+	<h4><strong>Consider</strong></h4><BR>
+
 	  <!-- Big display -->
   <iframe id="centercourt" width="999" height="300" style="border:0;"></iframe>
-
-  <!-- Thumbnails -->
+		<BR><BR>
+	<section class="sales-slider">
+  	<!-- Thumbnails -->
       <div class="slider-window">
       <div class="slides">
 
@@ -296,6 +298,7 @@
 
     <button class="prev">❮</button>
     <button class="next">❯</button>
+</section>
 	</div>
 	
 	<!-- GRID DATA SECTION -->
@@ -799,6 +802,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
