--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -75,6 +75,7 @@
 }
 .products { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
 .product-features { columns: 2; column-gap: 20px; padding-left: 20px; }
+button { vertical-align: middle; text-align: center; color: white; background-color: black; width: 150px; }
 </style>
 
 </head>
@@ -802,6 +803,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
