--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -75,7 +75,7 @@
 }
 .products { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
 .product-features { columns: 2; column-gap: 20px; padding-left: 20px; }
-button { vertical-align: middle; text-align: center; color: white; background-color: black; width: 150px; }
+button { vertical-align: middle; text-align: center; color: white; background-color: black; width: 150px; margin: 0 auto; }
 </style>
 
 </head>
@@ -247,9 +247,9 @@ button { vertical-align: middle; text-align: center; color: white; background-co
     	</div>
 	<br><br>
 	<!-- THIRD FEATURES SECTION -->
-	<div id="features" class="features"
+	<div id="features" class="features">
 	<HR>
-	<h2><strong>Consider</strong></h2><BR>
+	<h4>Consider</h4><BR>
 	  <!-- Big display -->
   <iframe id="centercourt" width="999" height="300" style="border:0;"></iframe>
 	<HR>
@@ -496,7 +496,6 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 <section id="pricing">
 <HR>
 	<span align="center"><font color="green"><h2>License Store</h2></font></span>
-    <span align="center"><p>Choose the perfect license for your needs.</p></span>
 <HR>
     <!-- ENTERPRISE LICENSES -->
      <h3 id="nopricing-enterprise">Enterprise Licenses</h3>
@@ -804,6 +803,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
