--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -76,6 +76,39 @@
 .products { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
 .product-features { columns: 2; column-gap: 20px; padding-left: 20px; }
 button { vertical-align: middle; text-align: center; color: white; background-color: black; width: 150px; margin: 0 auto; }
+	.emphasis {
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.emphasis-inner {
+  background: #000;              /* black background */
+  color: #b8ff4f;                /* kelly‑green text */
+  padding: 40px 50px;
+  border-radius: 12px;
+  max-width: 600px;
+  width: 100%;
+  box-shadow: 0 0 20px rgba(0,0,0,0.4);
+}
+
+.emphasis-inner h3 {
+  margin-bottom: 8px;
+  font-size: 1.4rem;
+  color: #7CFC00;                /* brighter kelly green for headers */
+}
+
+.emphasis-inner p {
+  margin-bottom: 24px;
+  font-size: 1rem;
+  color: #d9ffd9;                /* softer green for readability */
+}
+
+.emphasis-inner p:last-child {
+  margin-bottom: 0;
+}
+
 </style>
 
 </head>
@@ -687,16 +720,21 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 
     </div>
 
-    <div class="product-card" style="margin-top:40px;">
-        <h3>Secure & Compliant</h3>
-        <p>Enterprise‑grade security with SOC 2 Type II certification</p>
-        <h3>Expert Support</h3>
-        <p>Dedicated support team available 24/7 for enterprise customers</p>
-        <h3>Instant Activation</h3>
-        <p>Get started immediately with instant license activation</p>
-    </div>
-
 </section>
+
+	  <section class="emphasis">
+  <div class="emphasis-inner">
+    <h3>Secure & Compliant</h3>
+    <p>Enterprise‑grade security with SOC 2 Type II certification</p>
+
+    <h3>Expert Support</h3>
+    <p>Dedicated support team available 24/7 for enterprise customers</p>
+
+    <h3>Instant Activation</h3>
+    <p>Get started immediately with instant license activation</p>
+  </div>
+</section>
+
 <section class="middle-columns" style="background-color: lightgrey;">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
@@ -803,6 +841,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
