--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -36,20 +36,38 @@
     transition: transform 0.4s ease;
   }
 
-  .slide {
-    min-width: 300px;
-    height: 133px;
-    cursor: pointer;
-    padding: 2px;
-  }
 
-  .slide img {
-    width: 300px;
-    height: 133px;
-    object-fit: cover;
-    border-radius: 4px;
-  }
+.slide {
+  min-width: 200px;      /* smaller, cleaner */
+  height: 120px;
+  cursor: pointer;
+  padding: 2px;
+  border-radius: 4px;
+  overflow: hidden;
+  opacity: 0.7;
+  transition: opacity 0.2s ease, transform 0.2s ease;
+}
 
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;     /* keeps aspect ratio while filling */
+  border-radius: 4px;
+}
+
+.slide.active {
+  opacity: 1;
+  transform: scale(1.05);
+  outline: 2px solid #00e676;
+}
+
+
+
+
+
+
+
+	
   .prev, .next {
     position: absolute;
     top: 40%;
@@ -109,6 +127,16 @@ button { vertical-align: middle; text-align: center; color: white; background-co
   margin-bottom: 0;
 }
 
+#centercourt {
+  width: 1000px;
+  height: 300px;
+  display: block;
+  margin: 0 auto;        /* centers it */
+  border: 0;
+  background: #000;      /* optional: prevents white flash */
+}
+
+	
 </style>
 
 </head>
@@ -845,6 +873,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
