--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -498,21 +498,33 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 </section>
 
 <section id="deployment">
-    <h2>Deployment Models</h2>
+    <h2>Deployment </h2>
 
     <div class="products">
         <div class="product-card">
             <h3>Software On‑Premise</h3>
             <p>Installed and operated within your own data centers for maximum control.</p>
         </div>
+	<div class="product-card">
+            <h3>Software in ILEC PTT Colos</h3>
+            <p>Fully managed cloud‑based solutions at your primary partners location.</p>
+        </div>
 
         <div class="product-card">
-            <h3>Software in the Cloud</h3>
-            <p>Fully managed cloud‑based solutions with elastic scalability.</p>
+            <h3>Software in Public Cloud</h3>
+            <p>Fully managed cloud‑based solutions with elastic scalability in the worlds largest public clouds.</p>
         </div>
 
         <div class="product-card">
             <h3>Hybrid Software</h3>
+            <p>Combine on‑premise infrastructure with cloud‑based services for flexible deployment.</p>
+        </div>
+      <div class="product-card">
+            <h3>Licensing Options</h3>
+            <p>Combine on‑premise infrastructure with cloud‑based services for flexible deployment.</p>
+        </div>
+		<div class="product-card">
+            <h3>Pricing Information</h3>
             <p>Combine on‑premise infrastructure with cloud‑based services for flexible deployment.</p>
         </div>
     </div>
@@ -642,6 +654,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
