--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -519,21 +519,23 @@ button { vertical-align: middle; text-align: center; color: white; background-co
             <h3>Hybrid Software</h3>
             <p>Combine on‑premise infrastructure with cloud‑based services for flexible deployment.</p>
         </div>
-      <div class="product-card">
-            <h3>Licensing Options</h3>
-            <p>Combine on‑premise infrastructure with cloud‑based services for flexible deployment.</p>
+		 <div class="product-card">
+            <h3>Hybrid Grid Deployments(HA) </h3>
+            <p>Globally Distribute Your Data in HA Deployment bundles from our partner Capitol Technology Solutions.</p>
         </div>
-		<div class="product-card">
-            <h3>Pricing Information</h3>
-            <p>Combine on‑premise infrastructure with cloud‑based services for flexible deployment.</p>
         </div>
-    </div>
 </section>
 
 
 	  <section class="emphasis">
   <div class="emphasis-inner">
-    <h3>Secure & Compliant</h3>
+    <h3>Licensing Options</h3>
+    <p>Explore Fusion Licensening Options</p>
+
+    <h3>Get Started & Pricing</h3>
+    <p>Get started immediately with instant license activation</p>
+	  
+	<h3>Secure & Compliant</h3>
     <p>Enterprise‑grade security with SOC 2 Type II certification</p>
 
     <h3>Expert Support</h3>
@@ -541,6 +543,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 
     <h3>Instant Activation</h3>
     <p>Get started immediately with instant license activation</p>
+	   
   </div>
 </section>
 
@@ -654,6 +657,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
